# M5DualKey-UserDemo

./: CMakeLists.txt  README.md  partitions.csv  sdkconfig  sdkconfig.defaults
.github/ISSUE_TEMPLATE/: bug-report.yml
.github/workflows/: clang-format-check.yml
components/esp_duo/: CMakeLists.txt  README.md  esp_duo.c  idf_component.yml
components/esp_hid/include/: esp_hidd.h
components/keyboard_button/: keyboard_button.c
components/m5chain/: CMakeLists.txt  README.md  library.json
components/m5chain/examples/: chain_uart_example.cpp
components/m5chain/examples/Buzzer_Example/: buzzer_example.ino
components/m5chain/examples/MIC_Example/: mic_example.ino
components/m5chain/examples/Pedal_Example/: pedal_example.ino
components/m5chain/examples/ToF_Example/ToF_Example/: continuous_measure_example.ino  single_measure_exmple.ino
components/m5chain/src/Chain/: Chain.hpp
components/m5chain/src/ChainBuzzer/: ChainBuzzer.cpp  ChainBuzzer.hpp
components/m5chain/src/ChainCommon/: ChainCommon.cpp  ChainCommon.hpp
components/m5chain/src/ChainMIC/: ChainMIC.cpp  ChainMIC.hpp
components/m5chain/src/ChainPedal/: ChainPedal.cpp  ChainPedal.hpp
components/m5chain/src/ChainSwitch/: ChainSwitch.cpp  ChainSwitch.hpp
components/m5chain/src/ChainToF/: ChainToF.cpp  ChainToF.hpp
main/: CMakeLists.txt  adc_detect.c  btn_progress.c  dual_button.c  idf_component.yml  main.cpp  settings.c
main/ble/: ble_hid.c  ble_hid.h  esp_hid_gap.c  esp_hid_gap.h
main/chain_bus/: chain_bus.cpp  chain_bus.h  chain_bus_config.cpp  chain_bus_config.h  chain_bus_hid.cpp  chain_bus_hid.h
main/include/: adc_detect.h  btn_progress.h  dual_button.h  settings.h
main/usb/: tinyusb_cdc.c  tinyusb_cdc.h  tinyusb_hid.c  tinyusb_hid.h  tusb_config.h  usb_descriptors.c  usb_descriptors.h
main/web/: index.html  script.js  styles.css
(+8 files in other folders)
