idf_component_register(
    SRC_DIRS 
        "src"
        "src/Chain"
        "src/ChainAngle"
        "src/ChainBuzzer"
        "src/ChainCommon"
        "src/ChainEncoder"
        "src/ChainJoystick"
        "src/ChainKey"
        "src/ChainMIC"
        "src/ChainPIR"
        "src/ChainSwitch"
        "src/ChainToF"
        "src/ChainUart"
        "src/ChainPedal"
    INCLUDE_DIRS 
        "src"
        "src/Chain"
        "src/ChainAngle"
        "src/ChainBuzzer"
        "src/ChainCommon"
        "src/ChainEncoder"
        "src/ChainJoystick"
        "src/ChainKey"
        "src/ChainMIC"
        "src/ChainPIR"
        "src/ChainSwitch"
        "src/ChainToF"
        "src/ChainUart"
        "src/ChainPedal"
    REQUIRES 
        "driver"
        "esp_timer"
        "freertos"
)
